# ep_ws

ep_software/ep_description/: CMakeLists.txt  package.xml
ep_software/ep_description/urdf/: arm.urdf.xacro  camera.urdf.xacro  chassis.urdf.xacro  extension.urdf.xacro  gimbal.urdf.xacro  gripper.urdf.xacro  intelligent_controller.urdf.xacro  led.urdf.xacro  robomaster_ep.urdf.xacro  wheel.urdf.xacro
ep_software/ep_gazebo/: CMakeLists.txt  ep_robot_hw_sim_plugin.xml  package.xml
ep_software/ep_gazebo/config/: ep_hw_sim.yaml
ep_software/ep_gazebo/include/ep_gazebo/: ep_odom_sim.h  ep_robot_hw_sim.h
ep_software/ep_gazebo/launch/: empty_world.launch  load_world.launch
ep_software/ep_gazebo/src/: ep_odom_sim.cpp  ep_robot_hw_sim.cpp
